# onnx2torch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  build.sh  operators.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test.ipynb
.github/: CODEOWNERS  release-drafter-config.yml  spellcheck-settings.yml  wordlist.txt
.github/workflows/: REUSE.wheelbuild.yaml  integration.yml  lint.yml  manual-wheelbuild.yaml  publish-to-pypi.yml  release-drafter.yml  stale.yml
onnx2torch/: __init__.py  common.py  converter.py  custom_export_to_onnx.py  onnx_graph.py  onnx_node.py  onnx_tensor.py
onnx2torch/node_converters/: __init__.py  activations.py  arg_extrema.py  average_pool.py  base_element_wise.py  batch_norm.py  binary_math_operations.py  cast.py  clip.py  comparisons.py  concat.py  constant.py  constant_of_shape.py  conv.py  cumsum.py  depth_to_space.py  dropout.py  einsum.py  expand.py  eye.py  flatten.py  functions.py  gather.py  gemm.py  global_average_pool.py  gridsample.py  identity.py  instance_norm.py  isinf.py  isnan.py  layer_norm.py  logical.py  lrn.py  matmul.py  max_pool.py  mean.py  min_max.py  mod.py  neg.py  nms.py  (+24 more)
onnx2torch/utils/: common.py  custom_export_to_onnx.py  safe_shape_inference.py
onnx2torch2/: __init__.py  converter.py  onnx_graph.py  onnx_node.py
onnx2torch2/node_converters/: __init__.py  activations.py  average_pool.py  base_element_wise.py  batch_norm.py  binary_math_operations.py  cast.py  clip.py  comparisons.py  concat.py  constant.py  constant_of_shape.py  conv.py  cumsum.py  depth_to_space.py  dropout.py  einsum.py  expand.py  eye_like.py  flatten.py  functions.py  gather.py  gemm.py  global_average_pool.py  gridsample.py  identity.py  instance_norm.py  layer_norm.py  logical.py  lrn.py  matmul.py  max_pool.py  mean.py  min_max.py  mod.py  neg.py  nms.py  pad.py  pow.py  range.py  (+18 more)
onnx2torch2/utils/: common.py  custom_export_to_onnx.py  dtype.py  indices.py  padding.py
tests/: __init__.py  pytest.ini
tests/models/: models_test.py
tests/node_converters/: activations_test.py  arg_extrema_test.py  average_pool_max_pool_test.py  batch_norm_test.py  binary_operations_test.py  clip_test.py  comparisons_test.py  concat_test.py  constant_of_shape_test.py  constant_test.py  conv_test.py  cumsum_test.py  depth_to_space_test.py  dropout_test.py  einsum_test.py  expand_test.py  eye_like_test.py  eye_test.py  flatten_test.py  gather_test.py  gemm_test.py  global_avg_pool_test.py  instance_norm_test.py  layer_norm_test.py  logical_test.py  lrn_test.py  matmul_test.py  max_pool_test.py  mean_test.py  min_max_test.py  mod_test.py  neg.py  neg_test.py  nms_test.py  pad_test.py  pow_test.py  range_test.py  reciprocal_test.py  reduce_max_test.py  reduce_test.py  (+17 more)
tests/utils/: common.py  resources.py
valid/: __init__.py  common.py  datasets.py  models.py  utils.py
valid/shell/: build_imagenet.sh
