[project]
name = 'onnx2torch2'
version = '1.5.13'
license = {file = 'LICENSE'}
description = 'ONNX to PyTorch converter'
readme = 'README.md'
keywords = ['AI', 'onnx', 'torch', 'onnx2torch2', 'converters']
authors = [{name = '', email = ''}]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
]
requires-python = '>=3.6'
dependencies = [
    'numpy>=1.16.4',
    'onnx>=1.9.0',
    'torch>=1.8.0',
    'torchvision>=0.9.0',
]

[project.optional-dependencies]
dev = [
    'pytest',
    'black',
    'isort',
    'pylint',
    'pre-commit',
    'onnxruntime',
    'Pillow',
    'requests',
    'googledrivedownloader',
]

[project.urls]
repository = 'https://github.com/untetherai/onnx2torch2'

[tool.setuptools.packages.find]
include = ['onnx2torch2*']

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = 'black'
line_length = 120
ensure_newline_before_comments = true
force_single_line = true